<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_number_of_stories_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_number_of_stories_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_number_of_stories_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_sort_by_from_date_default"
        android:inputType="date"
        android:key="@string/settings_sort_by_from_date_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_sort_by_from_date_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_sort_by_to_date_default"
        android:inputType="date"
        android:key="@string/settings_sort_by_to_date_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_sort_by_to_date_label" />

</PreferenceScreen>